--- a/templates/index.html
+++ b/templates/index.html
@@ -18,4 +18,9 @@
   {% if result %}
   <div class="result">{{ result }}</div>
   {% endif %}
+  <div  > 
+    <a herf=""  ></a>
+    <a href="{{ url_for('seconda_pagina') }}">Vai alla seconda pagina</a>
+
+  </div>
 </body>
