--- a/templates/index.html
+++ b/templates/index.html
@@ -25,4 +25,10 @@
     <a href="{{ url_for('seconda_pagina') }}">Vai alla seconda pagina</a>
 
   </div>
+  <div>
+      <!-- index.html -->
+  <a href="{{ url_for('userfun.profiletest') }}">Go to Profile</a>
+
+
+  </div>
 </body>
