btn post lato server su altra pagina

--- a/templates/seconda.html
+++ b/templates/seconda.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Benvenuto nella seconda pagina!</h1>
+    <form action="{{ url_for('test_post.execute_function') }}" method="post">
+        <button type="submit">Esegui Funzione</button>
+    </form>
 </body>
 </html>
